unpackaged/main/default/objects/ETT_Country_Master__c/ETT_Country_Master__c.object-meta.xml
<CustomObject>
    <label>Country Master</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Country Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Country Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>