unpackaged/main/default/objects/ETT_Country_Master__c/fields/ETT_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>ETT_Country_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Country Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>