unpackaged/main/default/objects/ETT_Country_Master__c/fields/ETT_Last_Update_Date__c.field-meta.xml
<CustomField>
    <fullName>ETT_Last_Update_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Update Date</label>
    <type>Date</type>
</CustomField>