unpackaged/main/default/objects/ETT_Country_Master__c/fields/ETT_Last_Updated_By__c.field-meta.xml
<CustomField>
    <fullName>ETT_Last_Updated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Updated By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Country_Masters1</relationshipName>
    <type>Lookup</type>
</CustomField>