unpackaged/main/default/objects/ETT_Country_Master__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ETT_Country_Code__c</columns>
    <columns>ETT_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>